// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing UI has to remove class itemDone when task is uncompleted 1`] = `
<div
  className="Item"
>
  <div
    className="row"
  >
    <div
      className="col-8"
    >
      <div
        className=""
        id="itemText"
        onClick={[Function]}
      >
        <span
          className="fas fa-edit"
          style={
            Object {
              "fontSize": "small",
              "padding": 5,
            }
          }
        />
        Task 01
      </div>
      <div
        className="hidden"
        id="itemTextEdit"
      >
        <input
          onChange={[Function]}
          style={
            Object {
              "width": "100%",
            }
          }
          type="text"
          value="Task 01"
        />
        <div
          className="row"
          style={
            Object {
              "padding": 20,
            }
          }
        >
          <button
            id="okBtn"
            onClick={[Function]}
            style={
              Object {
                "fontSize": "small",
                "margin": 5,
              }
            }
          >
            Ok
          </button>
          <button
            id="cancelBtn"
            onClick={[Function]}
            style={
              Object {
                "fontSize": "small",
                "margin": 5,
              }
            }
          >
            Cancelar
          </button>
        </div>
      </div>
    </div>
    <div
      className="col-4"
    >
      <span
        className="fas fa-check"
        onClick={[Function]}
        style={
          Object {
            "padding": 5,
          }
        }
      />
      <span
        className="fas fa-times"
        onClick={[Function]}
        style={
          Object {
            "padding": 5,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Testing UI has to set class itemDone when task is done 1`] = `
<div
  className="Item itemDone"
>
  <div
    className="row"
  >
    <div
      className="col-8"
    >
      <div
        className=""
        id="itemText"
        onClick={[Function]}
      >
        <span
          className="fas fa-edit"
          style={
            Object {
              "fontSize": "small",
              "padding": 5,
            }
          }
        />
        Task 01
      </div>
      <div
        className="hidden"
        id="itemTextEdit"
      >
        <input
          onChange={[Function]}
          style={
            Object {
              "width": "100%",
            }
          }
          type="text"
          value="Task 01"
        />
        <div
          className="row"
          style={
            Object {
              "padding": 20,
            }
          }
        >
          <button
            id="okBtn"
            onClick={[Function]}
            style={
              Object {
                "fontSize": "small",
                "margin": 5,
              }
            }
          >
            Ok
          </button>
          <button
            id="cancelBtn"
            onClick={[Function]}
            style={
              Object {
                "fontSize": "small",
                "margin": 5,
              }
            }
          >
            Cancelar
          </button>
        </div>
      </div>
    </div>
    <div
      className="col-4"
    >
      <span
        className="fas fa-check"
        onClick={[Function]}
        style={
          Object {
            "padding": 5,
          }
        }
      />
      <span
        className="fas fa-times"
        onClick={[Function]}
        style={
          Object {
            "padding": 5,
          }
        }
      />
    </div>
  </div>
</div>
`;
